--- a/block-BJaaef/code/style.css
+++ b/block-BJaaef/code/style.css
@@ -9,13 +9,17 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   grid-gap: 1rem;
+  border: 10px solid black;
 }
 .box {
   border: 2px solid #d6bcfa;
   height: 500px;
   border-radius: 10px;
+  border: 1px solid black;
 }
 h1,
 h2 {
   text-align: center;
 }
+
+/* my-style */
